# ComputerExplorer

./: .gitignore  ComputerExplorer.sln
ComputerExplorer/: ComputerExplorer.vcxproj  ComputerExplorer.vcxproj.filters  ce_game_app.cpp  ce_game_app.h  ce_game_application.cpp  ce_game_application.h  ce_game_state.cpp  ce_game_state.h  ce_game_view.cpp  ce_game_view.h  ce_main_window.cpp  ce_main_window.h  ce_mainwindow.cpp  ce_mainwindow.h  ce_ram_widget.cpp  ce_ram_widget.h  circle.h  computer_explorer.cpp  moc_ce_game_view.cpp  moc_ce_main_window.cpp  moc_ce_mainwindow.cpp  moc_ce_ram_widget.cpp  rect.h
ComputerExplorerQML/: CMakeLists.txt  ComputerButtons.qml  ComputerCPUFlags.qml  ComputerRAM.qml  ComputerRegisters.qml  ComputerScreen.qml  Game.qml  GameScreen.qml  HomeScreen.qml  HomeScreen.qml.autosave  Levels.qml  Main.qml  RightColumn.qml  WelcomeTutorial.qml  computer.cpp  computer.h  main.cpp  ram_model.cpp  ram_model.h
ComputerExplorerQML/TA_exercises/Layouts/: Main.qml  TestElement.qml
ComputerExplorerQML/images/: desktop.ini  photosurface.rc
ComputerExplorerQML/resources/: computer_explorer.rc
ComputerExplorerQML/scripts/: computer_explorer_instalation_script_00.iss  computer_explorer_instalation_script_01.iss  computer_explorer_instalation_script_02.iss
DiQMLRAM/: CMakeLists.txt  Main.qml  main.cpp
DiQMLRamModel/: CMakeLists.txt  Main.qml  main.cpp  ram_model.cpp  ram_model.h
DiTicTacToe/: CMakeLists.txt  Main.qml  cppmanager.cpp  cppmanager.h  main.cpp
NiyaTicTacToe/: CMakeLists.txt  Main.qml  cppmanager.cpp  cppmanager.h  main.cpp
